--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "front end support for arias-education-platform",
   "scripts": {
     "start": "babel-node devServer.js",
+    "start:dev": "webpack-dev-server",
+    "build": "webpack",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,12 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.0.1",
-    "babel-plugin-import": "^1.6.3",
-    "babel-polyfill": "^6.26.0",
-    "bezier-easing": "^2.0.3",
-    "lodash": "^4.17.4",
-    "memory-fs": "^0.4.1",
-    "normalizr": "^3.2.4",
+    "jquery": "^1.12.4",
+    "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -37,7 +35,9 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.6.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
@@ -51,7 +51,6 @@
     "express": "^4.16.2",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.1",
-    "webpack-hot-middleware": "^2.21.0"
+    "webpack-dev-server": "^2.9.7"
   }
 }
