添加产品级的webpack配置文件.

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "arias-education-platform-fe",
   "version": "2017.12.17",
   "description": "front end support for arias-education-platform",
+  "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack",
+    "start": "webpack-dev-server --config webpack.config.js",
+    "build": "webpack --config webpack.config.prod.js",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,11 +19,12 @@
     "antd": "^3.0.1",
     "jquery": "^1.12.4",
     "normalize.css": "^7.0.0",
+    "normalizr": "^3.2.4",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "reactcss": "^1.2.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
