--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --config webpack.config.prod.js",
+    "build": "webpack --config webpack.config.js",
+    "build:prod": "webpack --config webpack.config.prod.js",
     "lint": "eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +17,8 @@
   "author": "lucas shao",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
     "antd": "^3.0.1",
     "jquery": "^1.12.4",
     "normalize.css": "^7.0.0",
@@ -30,6 +33,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "tinycolor2": "^1.4.1",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
