--- a/.babelrc
+++ b/.babelrc
@@ -5,14 +5,6 @@
     "stage-1"
   ],
   "plugins": [
-    "transform-object-rest-spread",
-    [
-      "import",
-      {
-        "libraryName": "antd",
-        "libraryDirectory": "es",
-        "style": "css"
-      }
-    ]
+    "transform-object-rest-spread"
   ]
 }
