--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
-    "antd": "^3.0.1",
+    "@types/react-redux": "^5.0.14",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/redux": "^3.6.0",
     "jquery": "^1.12.4",
     "normalize.css": "^7.0.0",
     "normalizr": "^3.2.4",
@@ -28,13 +30,13 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "reactcss": "^1.2.3",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "tinycolor2": "^1.4.1",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
+    "typestyle": "^1.5.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
