--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arias-education-platform-fe",
-  "version": "2017.12.17",
+  "version": "0.0.1",
   "description": "front end support for arias-education-platform",
   "main": "webpack.config.js",
   "scripts": {
@@ -17,11 +17,12 @@
   "author": "lucas shao",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^16.0.31",
+    "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "@types/react-router-dom": "^4.2.3",
-    "@types/redux": "^3.6.0",
+    "@types/redux": "^3.6.31",
+    "antd": "^3.1.3",
     "jquery": "^1.12.4",
     "normalize.css": "^7.0.0",
     "normalizr": "^3.2.4",
@@ -30,13 +31,14 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "recharts": "^1.0.0-beta.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "tinycolor2": "^1.4.1",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
-    "typestyle": "^1.5.1",
+    "typestyle": "^1.6.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
@@ -51,19 +53,19 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.13.1",
+    "css-loader": "^0.28.8",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "express": "^4.16.2",
-    "html-loader": "^0.5.1",
+    "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.4",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
+    "webpack-dev-server": "^2.10.0",
     "webpack-merge": "^4.1.1"
   }
 }
