--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
   "name": "arias-education-platform-fe",
+  "author": "lucas shao",
   "version": "0.0.1",
   "description": "front end support for arias-education-platform",
+  "license": "MIT",
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
     "build:prod": "webpack --config webpack.config.prod.js",
-    "lint": "eslint src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
   },
   "repository": {
     "type": "git",
     "url": "git@gitee.com:arias-education/haitang-edu-platform-fe.git"
   },
-  "author": "lucas shao",
-  "license": "MIT",
   "dependencies": {
     "@types/react": "^16.0.34",
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
+    "@types/react-router": "^4.0.20",
     "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-redux": "^5.0.11",
     "@types/redux": "^3.6.31",
-    "antd": "^3.1.3",
     "jquery": "^1.12.4",
     "normalize.css": "^7.0.0",
     "normalizr": "^3.2.4",
@@ -30,7 +42,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "5.0.0-alpha.9",
     "recharts": "^1.0.0-beta.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -42,6 +56,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^22.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -63,6 +78,7 @@
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.1",
+    "ts-jest": "^22.0.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0",
