--- a/package.json
+++ b/package.json
@@ -83,5 +83,8 @@
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0",
     "webpack-merge": "^4.1.1"
+  },
+  "peerDependencies": {
+    "jest": "^22.0.1"
   }
 }
