--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux-thunk": "^2.2.0",
     "tinycolor2": "^1.4.1",
     "ts-loader": "^3.2.0",
+    "tslib": "^1.9.0",
     "typescript": "^2.6.2",
     "typestyle": "^1.6.0",
     "uuid": "^3.1.0"
@@ -58,7 +59,7 @@
   "devDependencies": {
     "@types/jest": "^22.0.1",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "6",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -85,6 +86,7 @@
     "webpack-merge": "^4.1.1"
   },
   "peerDependencies": {
-    "jest": "^22.0.1"
+    "jest": "^22.0.1",
+    "react-transition-group": "^2.2.1"
   }
 }
