--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "arias-education-platform-fe",
   "author": "lucas shao",
   "version": "0.0.1",
+  "private": true,
   "description": "front end support for arias-education-platform",
   "license": "MIT",
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
     "build": "webpack --config webpack.config.js",
-    "build:prod": "webpack --config webpack.config.prod.js",
+    "build:prod": "webpack --config webpack.config.js -p",
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
     "test": "jest"
   },
@@ -28,25 +29,16 @@
     "url": "git@gitee.com:arias-education/haitang-edu-platform-fe.git"
   },
   "dependencies": {
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-redux": "^5.0.14",
-    "@types/react-router": "^4.0.20",
-    "@types/react-router-dom": "^4.2.3",
-    "@types/react-router-redux": "^5.0.11",
-    "@types/redux": "^3.6.31",
-    "jquery": "^1.12.4",
-    "normalize.css": "^7.0.0",
+    "classnames": "^2.2.5",
     "normalizr": "^3.2.4",
-    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
-    "recharts": "^1.0.0-beta.7",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "tinycolor2": "^1.4.1",
@@ -57,7 +49,21 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
+    "@types/history": "^4.6.2",
     "@types/jest": "^22.0.1",
+    "@types/node": "^9.4.0",
+    "@types/react": "^16.0.34",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
+    "@types/react-router": "^4.0.20",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-redux": "^5.0.11",
+    "@types/redux": "^3.6.31",
+    "@types/redux-actions": "^2.2.3",
+    "@types/webpack": "^3.8.4",
+    "@types/webpack-env": "^1.13.3",
+    "awesome-typescript-loader": "^3.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "6",
     "babel-loader": "^7.1.2",
@@ -78,15 +84,13 @@
     "express": "^4.16.2",
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
+    "react-hot-loader": "^3.1.3",
     "style-loader": "^0.19.1",
     "ts-jest": "^22.0.1",
+    "jest": "^22.0.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0",
     "webpack-merge": "^4.1.1"
-  },
-  "peerDependencies": {
-    "jest": "^22.0.1",
-    "react-transition-group": "^2.2.1"
   }
 }
