--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,14 +19,19 @@
     "lib": [
       "dom",
       "es2016",
-      "es2017.object"
+      "es2017.object",
+      "dom"
+    ],
+    "typeRoots": [
+      "./src/types",
+      "./node_modules/@types"
     ],
     "target": "es5", // "es2015" for ES6+ engines
     "module": "commonjs", // "es2015" for tree-shaking
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
@@ -39,7 +44,10 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "src/**/*.spec.*"
+    "dist",
+    "build",
+    "src/**/*.spec.*",
+    "__tests__",
+    "node_modules"
   ]
 }
