--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "@src/*": ["src/*"] // will enable -> import { ... } from '@src/components'
       // in webpack you need to add -> resolve: { alias: { '@src': PATH_TO_SRC } }
     },
-    "outDir": "dist/", // target for compiled files
+    "outDir": "build", // target for compiled files
     "allowSyntheticDefaultImports": true, // no errors on commonjs default import
     "allowJs": true, // include js files
     "checkJs": true, // typecheck js files
