--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "normalizr": "^3.2.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icon-base": "^2.1.2",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -81,11 +83,11 @@
     "express": "^4.16.2",
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.0.1",
     "react-hot-loader": "^3.1.3",
     "style-loader": "^0.19.1",
-    "ts-loader": "^3.2.0",
     "ts-jest": "^22.0.1",
-    "jest": "^22.0.1",
+    "ts-loader": "^3.2.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0",
