--- a/package.json
+++ b/package.json
@@ -63,31 +63,21 @@
     "@types/redux-actions": "^2.2.3",
     "@types/webpack": "^3.8.4",
     "@types/webpack-env": "^1.13.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "6",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-import": "^1.6.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-register": "^6.26.0",
     "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.8",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
+    "css-loader": "^0.28.11",
     "express": "^4.16.2",
     "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.1",
     "react-hot-loader": "^3.1.3",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.21.0",
     "ts-jest": "^22.0.1",
     "ts-loader": "^3.2.0",
+    "tslint": "^5.10.0",
+    "tslint-react": "^3.6.0",
+    "typed-css-modules": "^0.3.4",
+    "typed-css-modules-loader": "^0.0.13",
+    "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0",
