--- a/package.json
+++ b/package.json
@@ -81,9 +81,11 @@
     "typed-css-modules-loader": "^0.0.13",
     "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.1.6",
-    "webpack": "^3.10.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
     "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "^2.10.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   }
 }
