--- a/jest.config.json
+++ b/jest.config.json
@@ -3,7 +3,7 @@
   "transform": {
     ".(ts|tsx)": "./node_modules/ts-jest/preprocessor.js"
   },
-  "testRegex": "(/spec/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+  "testRegex": "(/src/|/__tests__/).*\\.(spec|test)\\.(ts|tsx|js)$",
   "moduleFileExtensions": [
     "ts",
     "tsx",
