add redux support. 9. add todo Services, convert TodoList from functional component to Class component which extends React.Component. that's really cool. and fixes the old bug. type error: Component is not assignable to 'StateLessComponent<Props: any>', just remove the ? symbol.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
+    "strictNullChecks": false,
     "strict": true,
     "pretty": true,
     "removeComments": true,
