--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@types/react-router-redux": "^5.0.11",
     "@types/redux": "^3.6.31",
     "@types/redux-actions": "^2.2.3",
-    "@types/webpack": "^3.8.4",
+    "@types/webpack": "^4.4.0",
     "@types/webpack-env": "^1.13.3",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.11",
@@ -73,6 +73,7 @@
     "jest": "^22.0.1",
     "json-server": "^0.13.0",
     "react-hot-loader": "^3.1.3",
+    "redux-devtools-extension": "^2.13.2",
     "style-loader": "^0.21.0",
     "ts-jest": "^22.0.1",
     "ts-loader": "^4.3.0",
